fix: sample zone layout issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -153,7 +153,7 @@ body {
 
 /* Style for paragraphs */
 .markdown-container p {
-  margin: 0 0 1.5em;
+  margin: 0 0 0.5em;
 }
 
 /* Style for unordered lists */
